# Omniverse_legged_robotics

./: README.md
DigitRobot.jl-main/urdf/: digit_model.urdf
DigitRobot.jl-main/urdf/digit_model/: instanceable_meshes.usd
URDF-Descriptions/ANYbotics/: README.md
URDF-Descriptions/ANYbotics/anymal_b_simple_description-CHAMP/urdf/: anymal.urdf
URDF-Descriptions/ANYbotics/anymal_c_simple_description-CHAMP/urdf/: anymal.urdf
URDF-Descriptions/BostonDynamics/: README.md
URDF-Descriptions/BostonDynamics/littledog_description-CHAMP/: CMakeLists.txt  README.md  package.xml
URDF-Descriptions/BostonDynamics/littledog_description-CHAMP/launch/: load.launch  standalone.launch
URDF-Descriptions/BostonDynamics/littledog_description-CHAMP/meshes/: back_left_upper.obj.mtl  body.obj.mtl  front_left_lower.obj.mtl  front_right_upper.obj.mtl
URDF-Descriptions/BostonDynamics/littledog_description-CHAMP/rviz/: littledog.rviz
URDF-Descriptions/BostonDynamics/littledog_description-CHAMP/urdf/: littledog.urdf
URDF-Descriptions/BostonDynamics/spot_description/urdf/: spot.urdf
URDF-Descriptions/DigitRobot/: README.md
URDF-Descriptions/Kodalab-GhostRobotics/: README.md
URDF-Descriptions/Kodalab-GhostRobotics/spirit_description/urdf/: spirit.urdf.xacro
URDF-Descriptions/KodlabPenn/: README.md
URDF-Descriptions/MIT_mini-cheetah/: README.md
URDF-Descriptions/Mini_pupper/mini-pupper_description/urdf/: accessories.urdf.xacro  (+4 more)
URDF-Descriptions/Mini_pupper/mini_pupper_simplified/: CMakeLists.txt  LICENSE  README.md  package.xml
URDF-Descriptions/Mini_pupper/mini_pupper_simplified/launch/: description.launch  view_urdf.launch
URDF-Descriptions/Mini_pupper/mini_pupper_simplified/urdf/: ld06.urdf.xacro  leg.urdf.xacro  mini-pupper.urdf  properties.urdf.xacro
URDF-Descriptions/Mini_pupper/stanford_pupper_Chandykunju Alex/: CMakeLists.txt  README.md  package.xml
URDF-Descriptions/Mini_pupper/stanford_pupper_Chandykunju Alex/config/: joint_names_standford_pupper.yaml
URDF-Descriptions/Mini_pupper/stanford_pupper_Chandykunju Alex/launch/: display.launch  gazebo.launch
URDF-Descriptions/Mini_pupper/stanford_pupper_Chandykunju Alex/meshes/: LF_HIP.STL  LF_THIGH_FOOT.STL  LH_HIP.STL  LH_THIGH_FOOT1.STL  RF_HIP.STL  RF_SHANK_ADAPTER.STL  RF_THIGH_FOOT1.STL  RH_SHANK_ADAPTER.STL  RH_THIGH.STL  RH_THIGH_FOOT.STL
URDF-Descriptions/Mini_pupper/stanford_pupper_Chandykunju Alex/urdf/: standford_pupper.urdf
URDF-Descriptions/Nao/: README.md
URDF-Descriptions/OpenQuadruped/: README.md
URDF-Descriptions/OpenQuadruped/spotmicro_description-CHAMP/: CMakeLists.txt  README.md  package.xml
URDF-Descriptions/OpenQuadruped/spotmicro_description-CHAMP/launch/: description.launch  view_urdf.launch
URDF-Descriptions/OpenQuadruped/spotmicro_description-CHAMP/rviz/: urdf_viewer.rviz
URDF-Descriptions/Stochlab/: README.md
URDF-Descriptions/Stochlab/stochlite-original/: README.md
URDF-Descriptions/Stochlab/stochlite_description-aditya-shirwatkar/: CMakeLists.txt  Readme.md  package.xml
URDF-Descriptions/Stochlab/stochlite_description-aditya-shirwatkar/launch/: view_urdf.launch
URDF-Descriptions/Stochlab/stochlite_description-aditya-shirwatkar/meshes/: VL53L0X.STL  base_link.STL  bl_abd_link.STL  bl_shank_link.STL  fl_abd_link.STL  fl_shank_link.STL  fr_abd_link.STL  fr_shank_link.STL
URDF-Descriptions/Stochlab/stochlite_description-aditya-shirwatkar/rviz/: stochlite_urdf.rviz
URDF-Descriptions/Stochlab/stochlite_description-aditya-shirwatkar/urdf/: stochlite.description.xacro  stochlite.gazebo.xacro  stochlite.leg_frames.xacro  stochlite.materials.xacro
URDF-Descriptions/UnitreeRobotics/: README.md
URDF-Descriptions/cassie_description/: README.md
URDF-Descriptions/cassie_description-UMich-BipedLab/config/: dependent_joints.yaml
URDF-Descriptions/cassie_description/urdf/: cassie_with_torso.xacro
URDF-Descriptions/dkitty_description/: README.md
URDF-Descriptions/dkitty_description/urdf/: accessories.urdf.xacro  dkitty.urdf  dkitty.urdf.xacro  gen_urdf  leg.urdf.xacro  properties.urdf.xacro
URDF-Descriptions/dream_walker-project/: CMakeLists.txt  LICENSE  README.md  package.xml  urdf.rviz
URDF-Descriptions/dream_walker-project/config/: joint_names_dw_descliption3.yaml
URDF-Descriptions/dream_walker-project/launch/: display.launch  gazebo.launch
URDF-Descriptions/dream_walker-project/meshes/: base_link.STL
URDF-Descriptions/dream_walker-project/urdf/: dream_walker.csv  dream_walker.gv  dream_walker.urdf
URDF-Descriptions/dream_walker/meshes/: A3_Link.STL  B3_Link.STL  C3_Link.STL  D3_Link.STL
URDF-Descriptions/openDogV2/: README.md
URDF-Descriptions/openDogV2/opendog_description-CHAMP/: CMakeLists.txt  README.md  package.xml
URDF-Descriptions/shadow_hand_ign/urdf/: shadow_hand.urdf
(+73 files in other folders)
