<package format="2">
  <name>dream_walker</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for dream_walker</p>
    <p>This package contains configuration data, 3D models and launch files
for dream_walker robot</p>
  </description>
  <author>SHOMA</author>
  <maintainer email="Hamashoma@gmail.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package>
