<?xml version="1.0"?>
<package format="2">
  <name>mini-pupper_description</name>
  <version>0.1.0</version>
  <description>Mini-Pupper Description Package</description>

  <maintainer email="nisshan.x@gmail.com">nisshan.x</maintainer>
  <author>nisshan</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>hector_gazebo_plugins</exec_depend>
  <exec_depend>hector_sensors_description</exec_depend>
  <exec_depend>velodyne_gazebo_plugins</exec_depend>
  <exec_depend>realsense2_description</exec_depend>

</package>