<package format="2">
  <name>standford_pupper_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for standford_pupper</p>
    <p>This package contains configuration data, 3D models and launch files
for standford_pupper robot</p>
  </description>
  <author>Chandy Alex</author>
  <maintainer email="chandyalex92@gmail.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package>